--- a/map practice 4 weather/css/styles.css
+++ b/map practice 4 weather/css/styles.css
@@ -43,3 +43,38 @@ ul li {
     pointer-events: none; /* Prevent tooltip from interfering with mouse events */
     font-size: 12px;
 }
+
+
+/* CSS below taken from https://gist.github.com/ElefHead/ebff082d41ef8b9658059c408096f782 */
+.background {
+    fill: lightblue;
+    opacity: 0.4;
+    pointer-events: all;
+}
+
+#states {
+    fill: none;
+}
+
+#states .active {
+    display:none;
+}
+
+#state-borders {
+    fill: none;
+    stroke: none;
+    stroke-width: 1.5px;
+    stroke-linejoin: round;
+    stroke-linecap: round;
+    pointer-events: none;
+}
+
+.county-boundary {
+    fill: none;
+    stroke: black;
+    stroke-width: .15px;
+}
+
+.county-boundary:hover, .state:hover {
+    fill: orange;
+}
